# s3RDMA-benchmarktool

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pixi.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
client/: CMakeLists.txt  buffers.cpp  buffers.hpp  main.cpp  s3_client.cpp  s3_client.hpp
common/: base64.hpp  cuobj_check.hpp  s3_util.hpp  sha256.hpp
doc/: design.md  internals.md  test.md
scripts/: bundle.sh  check_glibc.sh  configure.sh  deploy.sh  fetch_sdk.sh  gen_testdata.sh  run_demo.sh
server/: CMakeLists.txt  main.cpp  s3_server.cpp  s3_server.hpp
